--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 <script>
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
-ctx.moveTo(0,0);
-ctx.lineTo(200,100);
-ctx.stroke();
+ctx.fillStyle = "#ff0000";
+ctx.fillRect(0,0,128,128);
 </script>
 
 </body>
