--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
   <body>
     <h1>HTML Ipsum Presents</h1>
     <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
-
+    
     <canvas id="myCanvas" width="256" height="256" style="border:1px solid #d3d3d3;">Your browser does not support the HTML5 canvas tag.</canvas>
+    <p id="status">Initialising...</p>
 
     <script>
       var p = 0;
       function Draw()
       {
         p += 3;
+        var status = document.getElementById("status");
+        status.innerHTML = "Generating...";
         var c = document.getElementById("myCanvas");
         var ctx = c.getContext("2d");
         ctx.clearRect(0, 0, c.width, c.height);
         ctx.fillStyle = "#ff0000";
         ctx.fillRect(p,p,128,128);
+        status.innerHTML = "Done.";
       }
       
       setInterval( Draw, 100 );
